--- a/SemiSpoilerLogger/MajorItemByAreaTracker.csproj
+++ b/SemiSpoilerLogger/MajorItemByAreaTracker.csproj
@@ -7,15 +7,18 @@
         <Product>MajorItemByAreaTracker</Product>
         <Description>A Hollow Knight mod that lists the counts of user-determined major items by map area</Description>
         <Copyright>Copyright © BadMagic 2022</Copyright>
-        <AssemblyVersion>1.1.1.0</AssemblyVersion>
+        <AssemblyVersion>1.1.2.0</AssemblyVersion>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <!-- Change this to the path of your modded HK installation -->
-        <HollowKnightRefs>D:\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed</HollowKnightRefs>
+        <HollowKnightRefs>..\API</HollowKnightRefs>
         <!-- Change this to the path where you want the ready-to-upload exports to be -->
         <ExportDir>bin/Publish</ExportDir>
     </PropertyGroup>
+
+    <Import Project="LocalOverrides.targets" Condition="Exists('LocalOverrides.targets')" />
+    
     <Target Name="CopyMod" AfterTargets="PostBuildEvent">
         <RemoveDir Directories="$(ExportDir)/$(TargetName)/" />
         <MakeDir Directories="$(ExportDir)/$(TargetName)/" />
@@ -31,6 +34,14 @@
             <Output TaskParameter="Items" ItemName="FilesWithHashes" />
         </GetFileHash>
         <WriteLinesToFile File="$(ExportDir)/$(TargetName)/SHA.txt" Lines="@(FilesWithHashes->'%(FileHash)')" Overwrite="true" Encoding="UTF-8" />
+
+        <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+            <Output TaskParameter="Assemblies" ItemName="Targets" />
+        </GetAssemblyIdentity>
+        <ItemGroup>
+            <VersionNumber Include="@(Targets->'%(Version)')" />
+        </ItemGroup>
+        <WriteLinesToFile File="$(ExportDir)/$(TargetName)/version.txt" Lines="@(VersionNumber)" Overwrite="true" Encoding="UTF-8" />
     </Target>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <!-- Uncomment this to enabled strong name key signing for releases -->
