--- a/SemiSpoilerLogger/MajorItemByAreaTracker.csproj
+++ b/SemiSpoilerLogger/MajorItemByAreaTracker.csproj
@@ -7,7 +7,7 @@
         <Product>MajorItemByAreaTracker</Product>
         <Description>A Hollow Knight mod that lists the counts of user-determined major items by map area</Description>
         <Copyright>Copyright © BadMagic 2022</Copyright>
-        <AssemblyVersion>1.1.2.0</AssemblyVersion>
+        <AssemblyVersion>1.1.3.0</AssemblyVersion>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
@@ -48,6 +48,11 @@
         <!--<SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>sgKey.snk</AssemblyOriginatorKeyFile>-->
     </PropertyGroup>
+    <ItemGroup>
+      <Compile Remove="Resources\**" />
+      <EmbeddedResource Remove="Resources\**" />
+      <None Remove="Resources\**" />
+    </ItemGroup>
     <ItemGroup>
         <Reference Include="ConnectionMetadataInjector">
             <HintPath>$(HollowKnightRefs)/Mods/ConnectionMetadataInjector/ConnectionMetadataInjector.dll</HintPath>
@@ -343,6 +348,5 @@
     </ItemGroup>
     <ItemGroup>
         <None Include=".gitignore" />
-        <None Include="Resources\.gitignore" />
     </ItemGroup>
 </Project>
