--- a/SemiSpoilerLogger/MajorItemByAreaTracker.csproj
+++ b/SemiSpoilerLogger/MajorItemByAreaTracker.csproj
@@ -7,7 +7,8 @@
         <Product>MajorItemByAreaTracker</Product>
         <Description>A Hollow Knight mod that lists the counts of user-determined major items by map area</Description>
         <Copyright>Copyright © BadMagic 2022</Copyright>
-        <AssemblyVersion>1.2.0.0</AssemblyVersion>
+        <NoWarn>CS7035</NoWarn>
+        <AssemblyVersion>1.2.*</AssemblyVersion>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
